--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@
         visibility:visible;
     }
 
+    .cls-1{fill:#effafe;}
+    .cls-2{fill:#40bdff;}
+    .cls-3{fill:#fd0;}
+    .cls-4{fill:#efc803;}
+    .cls-5{fill:#e4ebed;}
+    .cls-6{fill:#2197f7;}
+    .cls-7{fill:#263238;}
+
+    .animacion-up{
+        transition: all 500ms ease;
+    }
     
     @media screen and (min-width:320px) {
         xs{
@@ -29,5 +40,4 @@
             flex-direction: row;
         }
     }
-
 }
