--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@
     .animacion-up{
         transition: all 500ms ease;
     }
+
+    .translate-50{
+        transform: translate(-50%,-50%);
+        transition: transform 1s;
+    }
     
     @media screen and (min-width:320px) {
         xs{
@@ -40,4 +45,18 @@
             flex-direction: row;
         }
     }
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: aliceblue;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #263238;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover{
+  
+    background-color: #3c4950;
 }
